implemented hyperparam search

--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,26 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Listing all the hyper-parameters that need to be set here\n",
-    "BATCH_SZ = 32\n",
-    "MODEL_TYPE = 'TRANSFORMER' # OPTIONS ARE : [FC, TRANSFORMER, LSTM]\n",
-    "LR = 5e-4\n",
-    "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "EVAL_DATA_PATH = 'hawkeye_trace_belady_xalancmbk_10M.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "SAVE_FLDR = 'results'\n",
-    "N_EPOCHS = 5\n",
-    "MODEL_DESC='{} MODEL'.format(MODEL_TYPE)\n",
-    "MAX_GRAD_NORM = 0.1\n",
-    "SET_WISE = True\n",
-    "RANDOM_SEED = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def run_epoch(model, optimizer, data_iterator, mode='train', eval_frac=-1):\n",
     "    model.train()\n",
     "    if mode == 'val':\n",
@@ -99,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,38 +130,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Program Counter': 0, 'Set': 1, 'Cache Friendly': 2} True\n",
-      "This is the average accuracy :  0.6780056315594869  From predicting all zeros\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if not os.path.exists(SAVE_FLDR):\n",
-    "    os.makedirs(SAVE_FLDR)\n",
-    "\n",
-    "set_random_seed(RANDOM_SEED)\n",
-    "model = get_model(MODEL_TYPE)\n",
-    "chosen_columns = model.get_data_columns()\n",
-    "train_dataset = csv_to_data(DATA_PATH, chosen_columns)\n",
-    "average_pred = np.mean(train_dataset[:, -1])\n",
-    "if torch.cuda.is_available():\n",
-    "    model.cuda()\n",
-    "model.use_cuda = torch.cuda.is_available()\n",
-    "eval_dataset = csv_to_data(EVAL_DATA_PATH, chosen_columns)\n",
-    "print(model.feat_idx_map, torch.cuda.is_available())\n",
-    "print('This is the average accuracy : ', 1.0 - average_pred, ' From predicting all zeros')"
+    "def eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=0, desc='graph', epoch=-1):\n",
+    "    all_stats = []\n",
+    "    for id_, (set_id, this_dataset) in enumerate(eval_setwise_dataset.items()):\n",
+    "        set_id = MAX_TR_KEY + int(set_id)\n",
+    "        model.remap_embedders(this_dataset, set_id)\n",
+    "        result = evaluate(model, this_dataset, print_res=False)\n",
+    "        average_pred = np.mean(this_dataset[:, -1])\n",
+    "        all_stats.append([*result, 1.0 - average_pred, average_pred])\n",
+    "    av_res = np.mean(all_stats, axis=0)\n",
+    "    print('[{}] Epoch[{}] : Loss {}, Acc {}, Major [0] Acc {}, Marjor [1] Acc {}'.format(desc, epoch, *av_res))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "TR_DESC = 'GRAPH'\n",
+    "EVAL_DATA_PATH = 'hawkeye_trace_belady_xalancmbk_10M.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "EVAL_DESC = 'XALANBMK'\n",
+    "SAVE_FLDR = 'results'\n",
+    "N_EPOCHS = 3\n",
+    "MAX_GRAD_NORM = 0.1\n",
+    "SET_WISE = True\n",
+    "RANDOM_SEED = 140982301"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_main():\n",
+    "    if not os.path.exists(SAVE_FLDR):\n",
+    "        os.makedirs(SAVE_FLDR)\n",
+    "\n",
+    "    set_random_seed(RANDOM_SEED)\n",
+    "    print('Creating Model of type : {}, Batchsz = {}, Learning Rate = {}'.format(MODEL_TYPE, BATCH_SZ, LR))\n",
+    "    model = get_model(MODEL_TYPE)\n",
+    "    chosen_columns = model.get_data_columns()\n",
+    "    train_dataset = csv_to_data(DATA_PATH, chosen_columns)\n",
+    "    average_pred = np.mean(train_dataset[:, -1])\n",
+    "    if torch.cuda.is_available():\n",
+    "        model.cuda()\n",
+    "    model.use_cuda = torch.cuda.is_available()\n",
+    "    eval_dataset = csv_to_data(EVAL_DATA_PATH, chosen_columns)\n",
+    "    print(model.feat_idx_map, torch.cuda.is_available())\n",
+    "    print('This is the average accuracy : ', 1.0 - average_pred, ' From predicting all zeros')\n",
+    "    \n",
+    "    if not SET_WISE:\n",
+    "        optimizer = Adam(model.parameters(), lr=LR)\n",
+    "        model.prep_for_data(train_dataset, temp_order=True)\n",
+    "        model = trainer(model, optimizer, train_dataset, num_epochs=N_EPOCHS, desc=MODEL_DESC, shuffle=False)\n",
+    "    else:\n",
+    "        train_setwise_dataset = group_by_set(train_dataset)\n",
+    "        eval_setwise_dataset = group_by_set(eval_dataset)\n",
+    "        all_tr_keys = list(train_setwise_dataset.keys())\n",
+    "        val_keys = np.random.choice(all_tr_keys, size=int(0.1 * len(all_tr_keys)))\n",
+    "        tr_keys = set(all_tr_keys) - set(val_keys)\n",
+    "\n",
+    "        vals = [len(x) for x in list(train_setwise_dataset.values())]\n",
+    "        max_key = all_tr_keys[np.argmax(vals)]\n",
+    "        # Logging-pre-training performance\n",
+    "        model.prep_for_data(train_setwise_dataset[max_key], temp_order=True)\n",
+    "        for set_id, this_dataset in train_setwise_dataset.items():\n",
+    "            model.remap_embedders(this_dataset, set_id)\n",
+    "\n",
+    "        tr_val_setwise_dataset = {k: train_setwise_dataset[k] for k in val_keys}\n",
+    "        train_setwise_dataset = {k: train_setwise_dataset[k] for k in tr_keys}\n",
+    "\n",
+    "        print('Logging Pre-Training Performance')\n",
+    "        MAX_TR_KEY = max([int(x) for x in train_setwise_dataset.keys()]) + 1\n",
+    "        eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC)\n",
+    "        eval_setwise(tr_val_setwise_dataset, model, desc=TR_DESC)\n",
+    "        optimizer = Adam(model.parameters(), lr=LR) # Now we can add all the model parameters to the optimizer\n",
+    "        for i in range(N_EPOCHS):\n",
+    "            model, stats = set_wise_trainer(model, optimizer, train_setwise_dataset, num_epochs=1)\n",
+    "            eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC, epoch=i)\n",
+    "            eval_setwise(tr_val_setwise_dataset, model, desc=TR_DESC, epoch=i)\n",
+    "    torch.save(model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR, MODEL_TYPE))\n",
+    "    # Neeed to return the eval performance here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -189,69 +230,60 @@
      "output_type": "stream",
      "text": [
       "Logging Pre-Training Performance\n",
-      "Average Stats Before Training : Loss 0.8954129431644109, Acc 0.09677514648437531, Major Acc 0.9166991735969036\n",
-      "Min Acc 0.29 | Mean Acc : 0.7032112630208334 | Median Acc 0.71 | Max Acc 0.98 \n",
-      "Epoch 0 [Eval] : Loss 0.3445139470687927, Acc 0.8593190104166659, Major Acc 0.9166991735969036\n",
-      "Min Acc 0.34 | Mean Acc : 0.7124527994791667 | Median Acc 0.72 | Max Acc 0.96 \n",
-      "Epoch 1 [Eval] : Loss 0.3512669692894027, Acc 0.8604295712425587, Major Acc 0.9166991735969036\n",
-      "Min Acc 0.34 | Mean Acc : 0.7139265950520834 | Median Acc 0.72 | Max Acc 0.95 \n",
-      "Epoch 2 [Eval] : Loss 0.3834917007178206, Acc 0.8395654761904751, Major Acc 0.9166991735969036\n",
-      "Min Acc 0.25 | Mean Acc : 0.7149039713541666 | Median Acc 0.72 | Max Acc 0.96 \n",
-      "Epoch 3 [Eval] : Loss 0.35830811314048144, Acc 0.8328450985863091, Major Acc 0.9166991735969036\n",
-      "Min Acc 0.32 | Mean Acc : 0.7167366536458334 | Median Acc 0.72 | Max Acc 1.0 \n",
-      "Epoch 4 [Eval] : Loss 0.3455853387238762, Acc 0.8480164271763385, Major Acc 0.9166991735969036\n"
+      "[XALANBMK] Epoch[-1] : Loss 0.5669085714687147, Acc 0.7927584170386928, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+      "[GRAPH] Epoch[-1] : Loss 0.6466435226619753, Acc 0.6364700854700853, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
+      "Min Acc 0.28 | Mean Acc : 0.703313545601727 | Median Acc 0.71 | Max Acc 0.97 \n",
+      "[XALANBMK] Epoch[0] : Loss 0.21828560275869344, Acc 0.9398152669270843, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+      "[GRAPH] Epoch[0] : Loss 0.5661767214918748, Acc 0.699307692307692, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
+      "Min Acc 0.3 | Mean Acc : 0.7142975355279726 | Median Acc 0.72 | Max Acc 0.98 \n",
+      "[XALANBMK] Epoch[1] : Loss 0.1907097827885426, Acc 0.938933570498513, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+      "[GRAPH] Epoch[1] : Loss 0.5545385216036414, Acc 0.7115726495726495, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
+      "Min Acc 0.3 | Mean Acc : 0.7178980032379924 | Median Acc 0.72 | Max Acc 0.99 \n",
+      "[XALANBMK] Epoch[2] : Loss 0.21351324060214275, Acc 0.9376284063430067, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+      "[GRAPH] Epoch[2] : Loss 0.5566216236123672, Acc 0.7122222222222221, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
+      "Min Acc 0.34 | Mean Acc : 0.7150611620795108 | Median Acc 0.72 | Max Acc 1.0 \n",
+      "[XALANBMK] Epoch[3] : Loss 0.19262991979805, Acc 0.9387770879836331, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+      "[GRAPH] Epoch[3] : Loss 0.5572973649407554, Acc 0.7141623931623937, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
+      "Min Acc 0.33 | Mean Acc : 0.7174689692390718 | Median Acc 0.72 | Max Acc 0.98 \n",
+      "[XALANBMK] Epoch[4] : Loss 0.19035296046768935, Acc 0.9382644275483645, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+      "[GRAPH] Epoch[4] : Loss 0.5555004538315483, Acc 0.7137179487179488, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n"
      ]
     }
    ],
    "source": [
-    "if not SET_WISE:\n",
-    "    optimizer = Adam(model.parameters(), lr=LR)\n",
-    "    model.prep_for_data(train_dataset, temp_order=True)\n",
-    "    model = trainer(model, optimizer, train_dataset, num_epochs=N_EPOCHS, desc=MODEL_DESC, shuffle=False)\n",
-    "else:\n",
-    "    train_setwise_dataset = group_by_set(train_dataset)\n",
-    "    eval_setwise_dataset = group_by_set(eval_dataset)\n",
-    "    train_keys, val_keys = list(train_setwise_dataset.keys()), list(eval_setwise_dataset.keys())\n",
+    "batch_szs = [32, 64]\n",
+    "lrs = [1e-3, 3e-4]\n",
+    "model_types = ['TRANSFORMER', \"TRANSFORMER_1\", \"TRANSFORMER_2\"]\n",
     "\n",
-    "    vals = [len(x) for x in list(train_setwise_dataset.values())]\n",
-    "    max_key = train_keys[np.argmax(vals)]\n",
-    "    # Logging-pre-training performance\n",
-    "    model.prep_for_data(train_setwise_dataset[max_key], temp_order=True)\n",
-    "    for set_id, this_dataset in train_setwise_dataset.items():\n",
-    "        model.remap_embedders(this_dataset, set_id)\n",
-    "\n",
-    "    print('Logging Pre-Training Performance')\n",
-    "    MAX_TR_KEY = max([int(x) for x in train_setwise_dataset.keys()]) + 1\n",
-    "    all_stats = []\n",
-    "    for id_, (set_id, this_dataset) in enumerate(eval_setwise_dataset.items()):\n",
-    "        set_id = MAX_TR_KEY + int(set_id)\n",
-    "        model.remap_embedders(this_dataset, set_id)\n",
-    "        result = evaluate(model, this_dataset, print_res=False)\n",
-    "        average_pred = np.mean(this_dataset[:, -1])\n",
-    "        all_stats.append([*result, 1.0 - average_pred])\n",
-    "    av_res = np.mean(all_stats, axis=0)\n",
-    "    print('Average Stats Before Training : Loss {}, Acc {}, Major Acc {}'.format(*av_res))\n",
-    "    optimizer = Adam(model.parameters(), lr=LR) # Now we can add all the model parameters to the optimizer\n",
-    "    for i in range(N_EPOCHS):\n",
-    "        model, stats = set_wise_trainer(model, optimizer, train_setwise_dataset, num_epochs=1)\n",
-    "        all_stats = []\n",
-    "        for id_, (set_id, this_dataset) in enumerate(eval_setwise_dataset.items()):\n",
-    "            set_id = MAX_TR_KEY + int(set_id)\n",
-    "            model.remap_embedders(this_dataset, set_id)\n",
-    "            result = evaluate(model, this_dataset, print_res=False)\n",
-    "            average_pred = np.mean(this_dataset[:, -1])\n",
-    "            all_stats.append([*result, 1.0 - average_pred])\n",
-    "        av_res = np.mean(all_stats, axis=0)\n",
-    "        print('Epoch {} [Eval] : Loss {}, Acc {}, Major Acc {}'.format(i, *av_res))"
+    "for BATCH_SZ in batch_szs:\n",
+    "    for LR in lrs:\n",
+    "        for MODEL_TYPE in model_types:\n",
+    "            MODEL_DESC = \"{}_BSZ.{}_LR.{}\".format(MODEL_TYPE, BATCH_SZ, LR)\n",
+    "            model_main()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), 'saved_model.pth')"
+    "Logging Pre-Training Performance\n",
+    "[XALANBMK] Epoch[-1] : Loss 0.30460784956185716, Acc 0.9340916806175635, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+    "[GRAPH] Epoch[-1] : Loss 0.8274423050928243, Acc 0.6419251336898395, Major [0] Acc 0.6740326004952232, Marjor [1] Acc 0.325967399504777\n",
+    "Min Acc 0.18 | Mean Acc : 0.7081264553107648 | Median Acc 0.71 | Max Acc 0.97 \n",
+    "[XALANBMK] Epoch[0] : Loss 0.3583814143656916, Acc 0.835435965401786, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+    "[GRAPH] Epoch[0] : Loss 0.5609315855564705, Acc 0.7085561497326205, Major [0] Acc 0.6740326004952232, Marjor [1] Acc 0.325967399504777\n",
+    "Min Acc 0.38 | Mean Acc : 0.7156376500089557 | Median Acc 0.72 | Max Acc 0.97 \n",
+    "[XALANBMK] Epoch[1] : Loss 0.34400734712223857, Acc 0.8387214820498513, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+    "[GRAPH] Epoch[1] : Loss 0.5578255723770077, Acc 0.710757575757576, Major [0] Acc 0.6740326004952232, Marjor [1] Acc 0.325967399504777\n",
+    "Min Acc 0.32 | Mean Acc : 0.7166765180010748 | Median Acc 0.72 | Max Acc 0.98 \n",
+    "[XALANBMK] Epoch[2] : Loss 0.32095069552136357, Acc 0.8771872791108623, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+    "[GRAPH] Epoch[2] : Loss 0.5630215700722421, Acc 0.6996524064171125, Major [0] Acc 0.6740326004952232, Marjor [1] Acc 0.325967399504777\n",
+    "Min Acc 0.3 | Mean Acc : 0.7167974207415369 | Median Acc 0.72 | Max Acc 0.96 \n",
+    "[XALANBMK] Epoch[3] : Loss 0.3449660920316438, Acc 0.8428508998325862, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+    "[GRAPH] Epoch[3] : Loss 0.5515242260142019, Acc 0.7134848484848486, Major [0] Acc 0.6740326004952232, Marjor [1] Acc 0.325967399504777\n",
+    "Min Acc 0.36 | Mean Acc : 0.7171323661114097 | Median Acc 0.72 | Max Acc 0.96 \n",
+    "[XALANBMK] Epoch[4] : Loss 0.34719606604928843, Acc 0.8491512625558014, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
+    "[GRAPH] Epoch[4] : Loss 0.5562430795634069, Acc 0.7061229946524064, Major [0] Acc 0.6740326004952232, Marjor [1] Acc 0.325967399504777"
    ]
   },
   {
