latest changes - working code - doing hyperparam search now

--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -108,7 +108,11 @@
     "    for epoch_ in range(num_epochs):\n",
     "        # get a data iterator for this epoch\n",
     "        accs = []\n",
-    "        for set_id, dataset in setwise_dataset.items():\n",
+    "        setwise_keys = list(setwise_dataset.keys())\n",
+    "        perm = np.random.permutation(len(setwise_keys))\n",
+    "        setwise_keys = np.array(setwise_keys)[perm]\n",
+    "        for set_id  in setwise_keys:\n",
+    "            dataset = setwise_dataset[set_id]\n",
     "            model.remap_embedders(dataset, set_id)\n",
     "            data_iter = get_batch_iterator(dataset, BATCH_SZ, shuffle=shuffle)\n",
     "            this_stats, _ = run_epoch(model, optimizer, data_iter, mode='train')\n",
@@ -157,7 +161,7 @@
     "EVAL_DATA_PATH = 'hawkeye_trace_belady_xalancmbk_10M.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
     "EVAL_DESC = 'XALANBMK'\n",
     "SAVE_FLDR = 'results'\n",
-    "N_EPOCHS = 3\n",
+    "N_EPOCHS = 5\n",
     "MAX_GRAD_NORM = 0.1\n",
     "SET_WISE = True\n",
     "RANDOM_SEED = 140982301"
@@ -165,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,44 +220,36 @@
     "            model, stats = set_wise_trainer(model, optimizer, train_setwise_dataset, num_epochs=1)\n",
     "            eval_setwise(eval_setwise_dataset, model, MAX_TR_KEY=MAX_TR_KEY, desc=EVAL_DESC, epoch=i)\n",
     "            eval_setwise(tr_val_setwise_dataset, model, desc=TR_DESC, epoch=i)\n",
-    "    torch.save(model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR, MODEL_TYPE))\n",
+    "    torch.save(model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR, MODEL_DESC))\n",
     "    # Neeed to return the eval performance here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating Model of type : TRANSFORMER_1, Batchsz = 32, Learning Rate = 0.0001\n",
+      "{'Program Counter': 0, 'Set Occupancy': 1, 'Belady Friendly': 2} True\n",
+      "This is the average accuracy :  0.6618220085895503  From predicting all zeros\n",
       "Logging Pre-Training Performance\n",
-      "[XALANBMK] Epoch[-1] : Loss 0.5669085714687147, Acc 0.7927584170386928, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
-      "[GRAPH] Epoch[-1] : Loss 0.6466435226619753, Acc 0.6364700854700853, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
-      "Min Acc 0.28 | Mean Acc : 0.703313545601727 | Median Acc 0.71 | Max Acc 0.97 \n",
-      "[XALANBMK] Epoch[0] : Loss 0.21828560275869344, Acc 0.9398152669270843, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
-      "[GRAPH] Epoch[0] : Loss 0.5661767214918748, Acc 0.699307692307692, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
-      "Min Acc 0.3 | Mean Acc : 0.7142975355279726 | Median Acc 0.72 | Max Acc 0.98 \n",
-      "[XALANBMK] Epoch[1] : Loss 0.1907097827885426, Acc 0.938933570498513, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
-      "[GRAPH] Epoch[1] : Loss 0.5545385216036414, Acc 0.7115726495726495, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
-      "Min Acc 0.3 | Mean Acc : 0.7178980032379924 | Median Acc 0.72 | Max Acc 0.99 \n",
-      "[XALANBMK] Epoch[2] : Loss 0.21351324060214275, Acc 0.9376284063430067, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
-      "[GRAPH] Epoch[2] : Loss 0.5566216236123672, Acc 0.7122222222222221, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
-      "Min Acc 0.34 | Mean Acc : 0.7150611620795108 | Median Acc 0.72 | Max Acc 1.0 \n",
-      "[XALANBMK] Epoch[3] : Loss 0.19262991979805, Acc 0.9387770879836331, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
-      "[GRAPH] Epoch[3] : Loss 0.5572973649407554, Acc 0.7141623931623937, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n",
-      "Min Acc 0.33 | Mean Acc : 0.7174689692390718 | Median Acc 0.72 | Max Acc 0.98 \n",
-      "[XALANBMK] Epoch[4] : Loss 0.19035296046768935, Acc 0.9382644275483645, Major [0] Acc 0.9166991735969036, Marjor [1] Acc 0.08330082640310221\n",
-      "[GRAPH] Epoch[4] : Loss 0.5555004538315483, Acc 0.7137179487179488, Major [0] Acc 0.6766751168764468, Marjor [1] Acc 0.32332488312355356\n"
+      "[XALANBMK] Epoch[-1] : Loss 0.9467683437845008, Acc 0.18651232447095034, Major [0] Acc 0.1170742352122857, Marjor [1] Acc 0.8829257647877143\n",
+      "[GRAPH] Epoch[-1] : Loss 0.8980975998565555, Acc 0.236572265625, Major [0] Acc 0.0019493177387914784, Marjor [1] Acc 0.9980506822612085\n",
+      "Min Acc 0.796875 | Mean Acc : 0.9486778341689971 | Median Acc 0.9615293560606061 | Max Acc 0.9952392578125 \n",
+      "[XALANBMK] Epoch[0] : Loss 0.5225304677944159, Acc 0.8829064052847166, Major [0] Acc 0.1170742352122857, Marjor [1] Acc 0.8829257647877143\n",
+      "[GRAPH] Epoch[0] : Loss 0.012141789280576631, Acc 0.9990234375, Major [0] Acc 0.0019493177387914784, Marjor [1] Acc 0.9980506822612085\n",
+      "Min Acc 0.9302536231884058 | Mean Acc : 0.9609475874268161 | Median Acc 0.9615293560606061 | Max Acc 0.9952392578125 \n"
      ]
     }
    ],
    "source": [
     "batch_szs = [32, 64]\n",
-    "lrs = [1e-3, 3e-4]\n",
-    "model_types = ['TRANSFORMER', \"TRANSFORMER_1\", \"TRANSFORMER_2\"]\n",
+    "lrs = [1e-4, 3e-4]\n",
+    "model_types = [\"TRANSFORMER_1\", \"TRANSFORMER_2\", 'TRANSFORMER']\n",
     "\n",
     "for BATCH_SZ in batch_szs:\n",
     "    for LR in lrs:\n",
