--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -152,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "TR_DESC = 'GRAPH'\n",
-    "EVAL_DATA_PATH = 'hawkeye_trace_belady_xalancmbk_10M.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
-    "EVAL_DESC = 'XALANBMK'\n",
+    "DATA_PATH = 'hawkeye_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "TR_DESC = 'XALANBMK' #'GRAPH'\n",
+    "EVAL_DATA_PATH = 'hawkeye_trace_belady_bzip.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "EVAL_DESC = 'BZIP'\n",
     "SAVE_FLDR = 'results'\n",
     "N_EPOCHS = 5\n",
     "MAX_GRAD_NORM = 0.1\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,14 +235,8 @@
      "text": [
       "Creating Model of type : TRANSFORMER_1, Batchsz = 32, Learning Rate = 0.0001\n",
       "{'Program Counter': 0, 'Set Occupancy': 1, 'Belady Friendly': 2} True\n",
-      "This is the average accuracy :  0.6618220085895503  From predicting all zeros\n",
-      "Logging Pre-Training Performance\n",
-      "[XALANBMK] Epoch[-1] : Loss 0.9467683437845008, Acc 0.18651232447095034, Major [0] Acc 0.1170742352122857, Marjor [1] Acc 0.8829257647877143\n",
-      "[GRAPH] Epoch[-1] : Loss 0.8980975998565555, Acc 0.236572265625, Major [0] Acc 0.0019493177387914784, Marjor [1] Acc 0.9980506822612085\n",
-      "Min Acc 0.796875 | Mean Acc : 0.9486778341689971 | Median Acc 0.9615293560606061 | Max Acc 0.9952392578125 \n",
-      "[XALANBMK] Epoch[0] : Loss 0.5225304677944159, Acc 0.8829064052847166, Major [0] Acc 0.1170742352122857, Marjor [1] Acc 0.8829257647877143\n",
-      "[GRAPH] Epoch[0] : Loss 0.012141789280576631, Acc 0.9990234375, Major [0] Acc 0.0019493177387914784, Marjor [1] Acc 0.9980506822612085\n",
-      "Min Acc 0.9302536231884058 | Mean Acc : 0.9609475874268161 | Median Acc 0.9615293560606061 | Max Acc 0.9952392578125 \n"
+      "This is the average accuracy :  0.906091602356272  From predicting all zeros\n",
+      "Logging Pre-Training Performance\n"
      ]
     }
    ],
