--- a/knowledge_distillation.ipynb
+++ b/knowledge_distillation.ipynb
@@ -310,9 +310,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pytorch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -324,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
