--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -234,44 +234,26 @@
      "output_type": "stream",
      "text": [
       "Creating Model of type : TRANSFORMER, Batchsz = 64, Learning Rate = 0.0001\n",
-      "{'Program Counter': 0, 'Set': 1, 'Belady Friendly': 2} True\n",
+      "{'Program Counter': 0, 'Set Occupancy': 1, 'Belady Friendly': 2} True\n",
       "This is the average accuracy :  0.6618220085895503  From predicting all zeros\n",
-      "Logging Pre-Training Performance\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ldery/computer_architecture/15740_Project/models.py:307: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  x = torch.tensor(x_pc).cuda()\n",
-      "/home/ldery/computer_architecture/15740_Project/models.py:311: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  y = torch.tensor(y).float()\n",
-      "/home/ldery/computer_architecture/15740_Project/models.py:316: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  x_set = torch.tensor(x_set)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[XALANCBMK] Epoch[-1] : Loss 0.4804737613061055, Acc 0.9565462239583562, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[-1] : Loss 0.5480295109905695, Acc 0.8564736842105256, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.64 | Mean Acc : 0.9880695443645083 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[0] : Loss 0.0021745478288342675, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[0] : Loss 0.07771601115145084, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[1] : Loss 0.002378570947267161, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[1] : Loss 0.07512351756664239, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[2] : Loss 0.0030610627593811563, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[2] : Loss 0.07075387200732765, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[3] : Loss 0.0024227354774429455, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[3] : Loss 0.07398492529755459, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[4] : Loss 0.0020109958837366557, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[4] : Loss 0.07809024428409574, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n"
+      "Logging Pre-Training Performance\n",
+      "[XALANCBMK] Epoch[-1] : Loss 0.8347451482033902, Acc 0.23767585164697635, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[-1] : Loss 0.8134684979802731, Acc 0.24458333333333332, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
+      "Min Acc 0.89 | Mean Acc : 0.9522641527164227 | Median Acc 0.9572159090909091 | Max Acc 0.996875 \n",
+      "[XALANCBMK] Epoch[0] : Loss 0.014977071287513338, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[0] : Loss 0.20673282063878354, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
+      "Min Acc 0.9252941176470588 | Mean Acc : 0.9619861035916343 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
+      "[XALANCBMK] Epoch[1] : Loss 0.015025366871681232, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[1] : Loss 0.21528790955496582, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
+      "Min Acc 0.9247058823529412 | Mean Acc : 0.9620733569712469 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
+      "[XALANCBMK] Epoch[2] : Loss 0.015057549764072333, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[2] : Loss 0.21180816443743286, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
+      "Min Acc 0.9011764705882352 | Mean Acc : 0.9603416753855692 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
+      "[XALANCBMK] Epoch[3] : Loss 0.015814002520544837, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[3] : Loss 0.2009639328048665, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
+      "Min Acc 0.9158823529411765 | Mean Acc : 0.9613759464853134 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
+      "[XALANCBMK] Epoch[4] : Loss 0.014882609818554361, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[4] : Loss 0.2202480000470876, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n"
      ]
     }
    ],
@@ -287,6 +269,13 @@
     "            MODEL_DESC = \"{}-{}_BSZ.{}_LR.{}\".format(TR_DESC, MODEL_TYPE, BATCH_SZ, LR)\n",
     "            model_main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
